<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutMe">


    <ImageView
        android:id="@+id/profile_pic"
        android:layout_width="223dp"
        android:layout_height="227dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/my_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_pic"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="85dp"
        android:fontFamily="casual"
        android:gravity="end"
        android:text="@string/name_about_me"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/my_name"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:onClick="onPhoneClick"
        android:text="@string/number_about_me"
        android:textSize="18sp"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/icon_call"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@+id/my_name"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/phone_number"
        app:srcCompat="@drawable/ic_call" />

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:onClick="onEmailClick"
        android:text="@string/email_about_me"
        android:textSize="18sp"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phone_number"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/email"
        app:srcCompat="@drawable/ic_email" />

    <TextView
        android:id="@+id/github"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="40dp"
        android:onClick="onGitHubAddressClick"
        android:text="@string/github_about_me"
        android:textSize="18sp"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/github_icon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_below="@+id/email"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@+id/github"
        app:srcCompat="@drawable/ic_github" />
</RelativeLayout>